<?xml version="1.0.0"?>
<package format="2">
  <name>unitree_high_state_publisher</name>
  <version>1.0.0</version>
  <description>The unitree_high_state_publisher package</description>


  <maintainer email="pgoenka@umd.edu">Piyush Goenka</maintainer>


  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
<exec_depend>unitree_legged_msgs</exec_depend>


</package>
